--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ description = "A Buffered File that allows for both reading and writing"
 license = "MIT"
 
 [dependencies]
+lru-cache = "0.1"
 
 [dev-dependencies]
 rand = "0.3"
